--- a/Browser/Basic_JIRA_Clone/styles.css
+++ b/Browser/Basic_JIRA_Clone/styles.css
@@ -19,6 +19,19 @@ body{
   display:flex;
   align-items: center;
 }
+
+.color-boxes{
+  height :100%;
+  width: 25%;
+  border :1px solid #7f8c8d ;
+  display :flex;
+  justify-content: center;
+  align-items: center;
+}
+.color{
+  height :50%;
+  width:50%;
+}
 .pink{
   background-color: lightpink;
 }
@@ -31,13 +44,21 @@ body{
 .black{
   background-color: black;
 }
-.color-boxes{
-  height :100%;
-  width: 25%;
-  /*border :10px solid #7f8c8d ;*/
-}
 .options{
   height : 70%;
   width : 25%;
   background-color: #7f8c8d;
+  display:flex;
+}
+.box{
+  width:50%;
+  height:100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+
+}
+.icon{
+  color:white;
+  font-size: 2rem;
 }
