--- a/Browser/Basic_JIRA_Clone/styles.css
+++ b/Browser/Basic_JIRA_Clone/styles.css
@@ -68,6 +68,36 @@ body{
   font-size: 2rem;
 }
 .main{
-  height : 50rem;
-  width :100%;
+  height: 50rem;
+    width: 100%;
+    padding: 5rem;
+    display: flex;
+    flex-wrap: wrap;
+}
+.ticket{
+  height: 10rem;
+    width: 15rem;
+    margin: 2rem;
+}
+.ticket-header{
+  height: 10%;
+  background-color: grey;
+}
+.ticket-content{
+  height :90%;
+  padding :0.3rem;
+}
+.text-area{
+    height: 90%;
+    width: 100%;
+    border: none;
+    outline: none;
+}
+.rand-id{
+  height :10%;
+  width:100%;
+  font-weight: bolder;
+   background-color: white;
+   font-family: sans-serif;
+   color: #989393;
 }
