--- a/Browser/Basic_JIRA_Clone/styles.css
+++ b/Browser/Basic_JIRA_Clone/styles.css
@@ -53,6 +53,7 @@ body{
   background-color: #7f8c8d;
   display:flex;
   border-radius: 5%;
+  margin-right: 3rem;
 }
 .clicked{
   background-color: #343c36;
@@ -64,6 +65,7 @@ body{
   justify-content: center;
   align-items: center;
   border-radius:20%;
+
 
 }
 .icon{
