--- a/Browser/Basic_JIRA_Clone/styles.css
+++ b/Browser/Basic_JIRA_Clone/styles.css
@@ -18,7 +18,7 @@ body{
   margin-left: 2rem;
   display:flex;
   align-items: center;
-  border-radius: 5%;
+  border-radius: 10%;
 
 }
 
@@ -52,7 +52,7 @@ body{
   width : 8rem;
   background-color: #7f8c8d;
   display:flex;
-  border-radius: 20%;
+  border-radius: 10%;
   margin-right: 3rem;
 }
 .clicked{
@@ -64,7 +64,7 @@ body{
   display:flex;
   justify-content: center;
   align-items: center;
-  border-radius:20%;
+  border-radius:10%;
 
 
 }
@@ -83,6 +83,7 @@ body{
   height: 10rem;
     width: 15rem;
     margin: 2rem;
+    border-radius: 20%;
 }
 .ticket-header{
   height: 10%;
@@ -104,4 +105,42 @@ body{
    background-color: white;
    font-family: sans-serif;
    color: #989393;
+}
+.modal {
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+    height: 18rem;
+    width: 35rem;
+    background: white;
+    position: fixed;
+    top: 10rem;
+    /* to place an element in horizontal center using position  */
+    left: calc((100vw - 35rem) / 2);
+    display: flex;
+}
+
+.contentarea {
+    width: 70%;
+    height: 100%;
+    font-size: 1.5rem;
+    padding: 2rem;
+}
+
+.pallet_container {
+    height: 100%;
+    width: 30%;
+    background-color: rgb(56, 54, 54);
+    display: flex;
+    /* column wise  */
+    flex-direction: column;
+    /* verically*/
+    justify-content: space-evenly;
+    /* horizontal center  */
+    align-items: center;
+}
+
+.pallet_color {
+    height: 15%;
+    width: 60%;
+    border-radius: 2px;
+
 }
