--- a/Excel_Clone/css/styles.css
+++ b/Excel_Clone/css/styles.css
@@ -31,5 +31,14 @@ body{
 .cell{
   border:0.5px solid black;
   height :2rem;
-  width : 5rem;
+  width : 2rem;
+  text-align: center;
+  padding-top: 0.5rem;
+}
+.top_row{
+  display : flex;
+
+}
+.top_row>.cell{
+  min-width: 5rem;
 }
