--- a/Excel_Clone/css/styles.css
+++ b/Excel_Clone/css/styles.css
@@ -12,22 +12,23 @@ body{
   background-color: lightgrey;
 
 }
+/************ Formula contaimer **************/
 .formula_container{
   border : 1px solid black;
   height :3rem;
   background-color: lightgrey;
 
 }
+
+
+/************ Grid Container ***************/
 .grid_container{
   border : 1px solid black;
   height :calc(100vh - 7rem);
   background-color: lightgrey;
+  overflow: scroll;
 }
-.sheets_container{
-  border : 1px solid black;
-  height :3rem;
-  background-color: lightgrey;
-}
+
 .cell{
   border:0.5px solid black;
   height :2rem;
@@ -41,4 +42,29 @@ body{
 }
 .top_row>.cell{
   min-width: 5rem;
+
+}
+
+/************* Sheets Container ***********/
+.sheets_container{
+  border : 1px solid black;
+  height :3rem;
+  background-color: lightgrey;
+  display: flex;
+}
+.add_sheet{
+  border : 1px solid black;
+  height :100%;
+  width : 4rem;
+  align-items: center;
+  justify-content: center;
+  display :flex;
+}
+.sheet{
+    border : 1px solid black;
+    height :100%;
+    width : 7rem;
+    align-items: center;
+    justify-content: center;
+    display :flex;
 }
