--- a/Excel_Clone/css/styles.css
+++ b/Excel_Clone/css/styles.css
@@ -6,11 +6,18 @@ body{
   margin :0px;
 }
 /*specific height*/
+
+/********** Menu Container **********/
 .menu_bar{
   border : 1px solid black;
   height :3rem;
   background-color: lightgrey;
+  display: flex;
 
+}
+
+.selected{
+  color:black;
 }
 /************ Formula contaimer **************/
 .formula_container{
@@ -23,26 +30,63 @@ body{
 
 /************ Grid Container ***************/
 .grid_container{
-  border : 1px solid black;
+/*  border : 1px solid black;*/
   height :calc(100vh - 7rem);
-  background-color: lightgrey;
-  overflow: scroll;
+/*  background-color: lightgrey;*/
+  overflow: auto;
+  position: relative;
+
 }
 
 .cell{
-  border:0.5px solid black;
-  height :2rem;
-  width : 2rem;
+  border:0.1px solid black;
+  height :1.5rem;
+  width : 5rem;
   text-align: center;
   padding-top: 0.5rem;
 }
-.top_row{
-  display : flex;
 
+.left_col>* {
+    width: 2rem;
+    text-align: center;
+    padding-top: 0.2rem;
+}
+.top_row {
+    display: flex;
+    position: absolute;
+    top: 0;
+    left: 2rem;
 }
 .top_row>.cell{
   min-width: 5rem;
 
+}
+.left_col {
+    position: absolute;
+    top: 1.4rem;
+}
+.grid {
+    position: absolute;
+    left: 2.01rem;
+}
+.top_row>.cell, .row>.cell {
+    padding-top: 0.2rem;
+    min-width: 5rem;
+    text-align: center;
+}
+.row>.cell {
+
+    font-family: "Courier New";
+}
+
+.row {
+    display: flex;
+}
+.tl_cell{
+  height :1.4rem;
+  width : 2rem;
+  border-right: 5px solid lightgray;
+  border-bottom: 5px solid lightgray;
 }
 
 /************* Sheets Container ***********/
